# semgrep-merge-rules

./: .gitignore  README.md  pyproject.toml
src/: cli.py  main.py
src/presets/: __init__.py  download.py  merge.py
src/presets/models/: __init__.py  preset.py  preset_source.py
